--- a/gb/24/12/6/n14386103.md
+++ b/gb/24/12/6/n14386103.md
@@ -7,6 +7,8 @@
 </h6>
 <hr>
 	<p>【大纪元2024年12月07日讯】12月5日，海外追查迫害法轮功国际组织（简称“追查国际”）公布了一份追查公告，公告披露了中共政法系统今年曾多次开会部署工作，确定全年的工作目标和计划，其中有多条涉及攻击法轮功的具体要求。而此前中共国安部、公安部统一策划安排的在海外发起一系列恶意攻击法轮功的事件，正是中共政法系统在海外犯罪活动的一部分。</p>
+<p>追查国际表示，近期在海外发生的一系列恶意攻击法轮功的事件。其中，包括有媒体对中共活摘法轮功学员器官罪恶的掩饰和对神韵艺术团扭曲事实的报导、中共网红的诬蔑诋毁、别有用心者发起的恶意起诉等；都是中共在海外系统迫害法轮功的一部分，是由国安部、公安部统一策划安排，由中共设在海外各大区的“打击法轮功工作处（简称：打法工作处）”具体实施的。例如“打法北美工作处”，主任吴秀华。</p>
+<p>“打法工作处”是中共“610办公室”的海外版，是专职迫害法轮功的海外秘密特务组织。挂靠在中共驻外使领馆，依托中共长期控制的华人社群和学生会等组织进行秘密活动。该工作处分布世界各大区，在海外迫害法轮功的所有案件背后，都有他们的黑影。</p>
 <p>据追查国际得到的举报消息，2024年上半年中共全国政法系统有几个会议，确定了全年的工作目标和计划。5月份的会议由政法委召开，中共中央政法委书记陈文清出席；6月份的公安部会议由公安部副部长陈思源主持，具体落实政法委的工作安排。会议都是视频会议，各地政法系统都有参加，重点内容是打击海外法轮功。</p>
 <p>其中，中共政法系统在今年5月18日召开的会议中，关于攻击法轮功的工作安排提出五点要求：</p>
 <p>一、密切关注法轮功等策动的对国内传真相计划，尤其是5.13、6.4、7.20等重要节日前后有什么对华动向，各级公安机关要制定相应的反制措施。</p>
@@ -14,49 +16,46 @@
 <p>三、关注法轮功组织与美国等西方合作的情况，美国两党对其有什么扶持，以及对华准备实施的新政策，尤其是美国大选，法轮功的态度和具体行动。</p>
 <p>四、特别关注法轮功和西方政客的合作制裁我高级别领导人的计划，不惜一切代价，终止类似的行为。</p>
 <p>五、围绕中国民主党核心人员，通过特情掌握涉境内搞事或反宣动向，收集涉境外此类人污点劣迹。提供给外宣进行反制。破坏法轮功和各种民运组织的合作，分化瓦解各个反华（反共）组织，配合外宣，制造各种矛盾冲突，使其无暇干扰我国内事务。</p>
+<p>另外，中共政法系统在今年6月17日召开的会议中再次提出两点要求，其中会议要求：各省厅调配资源，全力支持最近在社交媒体上攻击神韵、法轮功的两名华语YouTuber等人和法轮功斗争，要求通过各种管道，不断向这些人爆料，提供公安内部掌握的所有法轮功材料。</p>
 <p>值得注意的是，中共打击海外独立媒体《大纪元时报》，只是其在海外发起的一系列攻击行动的一部分。</p>
 <p>据追查国际公告，根据中共公安内部最新的情报，打击大纪元只是整个计划的一个环节，他们的目标不只是大纪元和神韵，最后目标是要把海外法轮功整个解散掉。所以后续可能会采用各种正常社会的人无法想像的恶劣手段，特别要针对大纪元的一些重要人物进行打击，这都是中共海外特别行动组在做。</p>
 <p>公告提到，中共海外特别行动组正在通过各种管道散布谣言，比如说“美国政府被中共收买了，要取缔法轮功”，要煽动法轮功学员和美国政府对抗，找一些专业人员设计文案，号召所有学员就像1999年去天安门上访那样走出去，诸如此类。各地负责境外的五毛账号，都被要求统一散布这些内容。</p>
-<p>追查国际调查证实，近期在海外发生的一系列恶意攻击法轮功的事件，是由中共国安部、公安部统一策划安排，由中共设在海外各大区的“打击法轮功工作处”（简称“打法工作处”）具体实施的。例如“打法北美工作处”，主任吴秀华。</p>
-<p>“打法工作处”是中共“610办公室”的海外版，是专职迫害法轮功的海外秘密特务组织。挂靠在中共驻外使领馆，依托中共长期控制的华人社群和学生会等组织进行秘密活动。该工作处分布世界各大区，在海外迫害法轮功的所有案件背后，都有他们的黑影。</p>
 <p>追查国际表示，1999年以来，中共犯罪集团操控整部国家机器，对上亿法轮功修炼者实施群体灭绝性迫害，持续25年了，至今还在继续。这场迫害，一方面强制性洗脑转化，逼迫法轮功学员放弃对法轮大法的信仰。对拒绝放弃信仰者进行绑架、非法判刑、酷刑虐待，甚至大量活摘法轮功学员器官大屠杀，中共犯下“这个星球上前所未有的罪恶”，是群体灭绝罪、反人类罪。</p>
 <p>另一方面，中共对法轮功进行诋毁、诬蔑、妖魔化宣传，毒害全世界众生，甚至，派遣大量特务在多国渗透，进行跨国迫害。其真实目的，是企图摧毁人类的道德良知，毁灭传统价值观和信神的传统文化，企图用共产邪灵控制世界，使人类走向毁灭。</p>
-<p>追查国际呼吁，全世界所有正义人士立即行动起来，全面收集中共迫害法轮功的犯罪者名单和罪证，向追查国际举报，为即将来临的大审判、全面追查和惩治中共反人类罪行提供证据，刻不容缓。这不仅仅是因为此等罪行必须惩处，更是拯救人类最后的道德良知。<ahref="https://www.zhuichaguoji.org/node/143775">点击观看追查国际公告原文</a>）</p>
+<p>追查国际呼吁，全世界所有正义人士立即行动起来，全面收集中共迫害法轮功的犯罪者名单和罪证，向追查国际举报，为即将来临的大审判、全面追查和惩治中共反人类罪行提供证据，刻不容缓。这不仅仅是因为此等罪行必须惩处，更是拯救人类最后的道德良知。<ahref="https://www.zhuichaguoji.org/node/143775">点击观看追查国际公告原文</a>）◇</p>
 <p>责任编辑：李净#</p>
 <h3>推荐阅读</h3>
 <h3><span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/12/9/n13881824.md#1" target="_blank" rel="noopener">广东省原副省长李春生被查 曾迫害法轮功</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/12/30/n13895527.md#1" target="_blank" rel="noopener">安徽公安副厅长陈小平获刑11年半 曾迫害法轮功</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/21/12/14/n13437561.md#1" target="_blank" rel="noopener">江苏司法厅前副厅长于爱荣被查 曾迫害法轮功</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14324351.md#1" target="_blank" rel="noopener">银川政法委书记李永宁被公诉 曾迫害法轮功</a> </span></span></span></span></h3>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313613.md#1">《纽时》无视证据扭曲事实 攻击法轮功</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/14/n14330407.md#1">法轮功纽约大游行 声援4.3亿中国人退出中共</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339453.md#1">国际和平日 比利时议员及各界声援法轮功</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375768.md#1">【内幕】中共国安部长发动在美攻击法轮功</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/30/n9092520.md#1" target="_blank">法轮大法洪传新西兰 20年点滴回顾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/11/n11180163.md#1" target="_blank">【征文】章阁：中国古代专制吗（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/5/n9927251.md#1" target="_blank">澄清长江日报诽谤文章 武汉退休干部的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383823.md#1">《我的爱，我的新娘》：笑中带泪的婚姻生活</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373225.md#1">【古道人生】妻子死了 丈夫思念太过 最后是这样解决的</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/29/n14381575.md#1">【未解之谜】2025年大变革 中国迎来文化复兴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/21/n12636114.md#1">【元曲大家】关汉卿的散曲本色</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/8/n10769948.md#1">北宋第一神箭手何灌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14385445.md#1">【秦鹏观察】纳瓦罗 川普新政中的核心鹰派</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14385293.md#1">【新闻大破解】小心断链断缆 解密中共暗黑战略</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/5/n13774125.md#1">【神韵早期节目】大清格格（2011年制作）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384294.md#1">中共报复美国芯片新禁令 专家指适得其反</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383227.md#1">【军事情报局】乌总司令西尔斯基反攻计划曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384228.md#1">为什么人类没被地球大气层的重量压扁？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384271.md#1">知名作家琼瑶淡水住家身亡 终年86岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384211.md#1">47岁台湾女星林利霏罹癌 夫张翰、网友帮打气</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383928.md#1">黄晓明百度资料更新 网红叶珂成“前女友”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14384691.md#1">打破港片纪录 《破?地狱》上映25日票房过亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384567.md#1">刘家昌琼瑶相继离世 《不如归去》泄惊人巧合</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/2/n14382597.md#1">女性预防断崖式衰老 三因素是关键</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14384957.md#1">医生：“美容觉”是真的 可让你容光焕发</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/28/n14380296.md#1">日本或发生特大地震  不同场合这样应对</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/28/n14380751.md#1">年金诈骗知多少？避免受骗上当的关键技巧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14384895.md#1">【摄影天地】蓝翅八色鸫 喜欢在地上觅食的候鸟</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/6/n14386103.htm">中共迫害法轮功的工作计划和具体要求被曝光</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386103.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
